...
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="256dp" />

    <TextView
        android:id="@+id/recipe_step_description_tv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorLightPrimary"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
...
